--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "vue3-ui",
+  "private": true,
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "pnpm -C play dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,5 +13,14 @@
     "name": "Lei Zhang",
     "email": "whouu@qq.com"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@vue3-ui/components": "workspace:^",
+    "@vue3-ui/theme-chalk": "workspace:^",
+    "@vue3-ui/utils": "workspace:^"
+  },
+  "devDependencies": {
+    "@types/node": "^20.2.3",
+    "typescript": "^5.0.4"
+  }
 }
