--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "pnpm -C play dev",
+    "typecheck:web": "vue-tsc -p tsconfig.web.json --composite false --noEmit",
+    "typecheck:play": "vue-tsc -p tsconfig.play.json --composite false --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.3",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vue-tsc": "^1.4.2"
   }
 }
