--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "pnpm -C play dev",
+    "typecheck": "run-p typecheck:web typecheck:play typecheck:node",
     "typecheck:web": "vue-tsc -p tsconfig.web.json --composite false --noEmit",
     "typecheck:play": "vue-tsc -p tsconfig.play.json --composite false --noEmit",
+    "typecheck:node": "tsc -p tsconfig.node.json --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.3",
+    "npm-run-all": "^4.1.5",
     "typescript": "^5.0.4",
     "vue-tsc": "^1.4.2"
   }
