--- a/package.json
+++ b/package.json
@@ -6,10 +6,6 @@
   "main": "index.js",
   "scripts": {
     "dev": "pnpm -C play dev",
-    "typecheck": "run-p typecheck:web typecheck:play typecheck:node",
-    "typecheck:web": "vue-tsc -p tsconfig.web.json --composite false --noEmit",
-    "typecheck:play": "vue-tsc -p tsconfig.play.json --composite false --noEmit",
-    "typecheck:node": "tsc -p tsconfig.node.json --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -25,8 +21,14 @@
   },
   "devDependencies": {
     "@types/node": "^20.2.3",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^5.0.4",
-    "vue-tsc": "^1.4.2"
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-vue": "^9.14.1",
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4"
   }
 }
